--- a/pages/components/tabs.html
+++ b/pages/components/tabs.html
@@ -12,7 +12,7 @@
 
 <section class="details">
   <h2>Attributes</h2>
-  <span><strong>Tabs:</strong></span>
+  <p><strong>Tabs:</strong></p>
   <p>vertical - static (optional). Sets the orientation of the tabs in the tablist to vertical.</p>
   <span><strong>Tab:</strong></span>
   <p>disabled - static (optional). Controls whether the tab is disabled.</p>
