--- a/ui/components/switch/switch.css
+++ b/ui/components/switch/switch.css
@@ -2,8 +2,8 @@ ui-switch{
   --ui-switch-track-border-radius:var(--ui-border-radius-pill);
   --ui-switch-track-height:24px;
   --ui-switch-track-width:40px;
-  --ui-switch-track-surface-color:var(--ui-color-gray-600);
-  --ui-switch-track-checked-surface-color:var(--ui-color-blue-500);
+  --ui-switch-track-surface-color:var(--ui-surface-color-secondary);
+  --ui-switch-track-checked-surface-color:var(--ui-color-blue-50);
   --ui-switch-thumb-border-radius:var(--ui-border-radius-circle);
   --ui-switch-thumb-height:16px;
   --ui-switch-thumb-width:16px;
@@ -22,22 +22,12 @@ ui-switch{
   background-color:var(--ui-switch-track-surface-color);
   transition-property:background-color,outline-color,padding-inline-start;
 
-  &[disabled]{
-    cursor:not-allowed;
-    opacity:0.5;
-    pointer-events:auto;
-  }
-
-  &:focus-visible:not([disabled]){
-    outline-color:var(--ui-outline-color);
-  }
-
   &::before{
+    content:'';
     height:var(--ui-switch-thumb-height);
     width:var(--ui-switch-thumb-width);
     border-radius:var(--ui-switch-thumb-border-radius);
     background-color:var(--ui-switch-thumb-surface-color);
-    content:'';
   }
 
   &[checked]{
