--- a/ui/styles/colors.css
+++ b/ui/styles/colors.css
@@ -1,69 +1,80 @@
 :root{
   /* black white */
-  --ui-color-white:oklch(100% 0 0);
-  --ui-color-black:oklch(0% 0 0);
+  --ui-color-white:oklch(1 0 0);
+  --ui-color-black:oklch(0 0 0);
 
   /* gray */
-  --ui-color-gray-10:oklch(10% 0 0);
-  --ui-color-gray-15:oklch(15% 0 0);
-  --ui-color-gray-20:oklch(20% 0 0);
-  --ui-color-gray-25:oklch(25% 0 0);
-  --ui-color-gray-30:oklch(30% 0 0);
-  --ui-color-gray-35:oklch(35% 0 0);
-  --ui-color-gray-40:oklch(40% 0 0);
-  --ui-color-gray-45:oklch(45% 0 0);
-  --ui-color-gray-50:oklch(50% 0 0);
-  --ui-color-gray-55:oklch(55% 0 0);
-  --ui-color-gray-60:oklch(60% 0 0);
-  --ui-color-gray-65:oklch(65% 0 0);
-  --ui-color-gray-70:oklch(70% 0 0);
-  --ui-color-gray-75:oklch(75% 0 0);
-  --ui-color-gray-80:oklch(80% 0 0);
-  --ui-color-gray-85:oklch(85% 0 0);
-  --ui-color-gray-90:oklch(90% 0 0);
-  --ui-color-gray-95:oklch(95% 0 0);
+  --ui-color-gray-10:oklch(0.10 0 0);
+  --ui-color-gray-15:oklch(0.15 0 0);
+  --ui-color-gray-20:oklch(0.20 0 0);
+  --ui-color-gray-25:oklch(0.25 0 0);
+  --ui-color-gray-30:oklch(0.30 0 0);
+  --ui-color-gray-35:oklch(0.35 0 0);
+  --ui-color-gray-40:oklch(0.40 0 0);
+  --ui-color-gray-45:oklch(0.45 0 0);
+  --ui-color-gray-50:oklch(0.50 0 0);
+  --ui-color-gray-55:oklch(0.55 0 0);
+  --ui-color-gray-60:oklch(0.60 0 0);
+  --ui-color-gray-65:oklch(0.65 0 0);
+  --ui-color-gray-70:oklch(0.70 0 0);
+  --ui-color-gray-75:oklch(0.75 0 0);
+  --ui-color-gray-80:oklch(0.80 0 0);
+  --ui-color-gray-85:oklch(0.85 0 0);
+  --ui-color-gray-90:oklch(0.90 0 0);
+  --ui-color-gray-95:oklch(0.95 0 0);
 
   /* red */
-  --ui-color-red-10:oklch(30% 0.15 27);
-  --ui-color-red-20:oklch(38% 0.18 27);
-  --ui-color-red-30:oklch(45% 0.21 27);
-  --ui-color-red-40:oklch(52% 0.23 27);
-  --ui-color-red-50:oklch(60% 0.23 27);
+  --ui-color-red-10:oklch(30% 0.12 27);
+  --ui-color-red-20:oklch(38% 0.16 27);
+  --ui-color-red-30:oklch(45% 0.20 27);
+  --ui-color-red-40:oklch(52% 0.22 27);
+  --ui-color-red-50:oklch(60% 0.22 27);
   --ui-color-red-60:oklch(68% 0.18 27);
   --ui-color-red-70:oklch(78% 0.10 27);
   --ui-color-red-80:oklch(88% 0.05 27);
   --ui-color-red-90:oklch(95% 0.01 27);
 
   /* green */
-  --ui-color-green-10:oklch(30% 0.12 148);
+  --ui-color-green-10:oklch(30% 0.10 148);
   --ui-color-green-20:oklch(38% 0.14 148);
   --ui-color-green-30:oklch(48% 0.17 148);
   --ui-color-green-40:oklch(58% 0.19 148);
-  --ui-color-green-50:oklch(66% 0.19 148);
-  --ui-color-green-60:oklch(70% 0.16 148);
+  --ui-color-green-50:oklch(66% 0.18 148);
+  --ui-color-green-60:oklch(70% 0.15 148);
   --ui-color-green-70:oklch(78% 0.10 148);
   --ui-color-green-80:oklch(88% 0.05 148);
   --ui-color-green-90:oklch(95% 0.01 148);
 
   /* blue */
-  --ui-color-blue-10:oklch(28% 0.18 252);
-  --ui-color-blue-20:oklch(42% 0.22 252);
-  --ui-color-blue-30:oklch(50% 0.23 252);
-  --ui-color-blue-40:oklch(57% 0.25 252);
-  --ui-color-blue-50:oklch(63% 0.23 252);
+  --ui-color-blue-10:oklch(28% 0.15 252);
+  --ui-color-blue-20:oklch(42% 0.20 252);
+  --ui-color-blue-30:oklch(50% 0.22 252);
+  --ui-color-blue-40:oklch(57% 0.24 252);
+  --ui-color-blue-50:oklch(63% 0.22 252);
   --ui-color-blue-60:oklch(70% 0.15 252);
   --ui-color-blue-70:oklch(80% 0.10 252);
   --ui-color-blue-80:oklch(90% 0.04 252);
   --ui-color-blue-90:oklch(95% 0.01 252);
 
+--ui-color-blue-10: oklch(28.00% 0.150 252);
+--ui-color-blue-20: oklch(47.72% 0.215 252);
+--ui-color-blue-30: oklch(55.81% 0.216 252);
+--ui-color-blue-40: oklch(63.89% 0.201 252);
+--ui-color-blue-50: oklch(71.97% 0.171 252);
+--ui-color-blue-60: oklch(80.06% 0.124 252);
+--ui-color-blue-70: oklch(88.14% 0.061 252);
+--ui-color-blue-80: oklch(93.50% 0.030 252);
+--ui-color-blue-90: oklch(97.00% 0.010 252);
+
+
   /* yellow */
-  --ui-color-yellow-10:oklch(40% 0.10 83);
-  --ui-color-yellow-20:oklch(50% 0.13 83);
+  --ui-color-yellow-10:oklch(40% 0.08 83);
+  --ui-color-yellow-20:oklch(50% 0.12 83);
   --ui-color-yellow-30:oklch(60% 0.15 83);
-  --ui-color-yellow-40:oklch(72% 0.17 83);
-  --ui-color-yellow-50:oklch(81% 0.17 83);
-  --ui-color-yellow-60:oklch(84% 0.13 83);
+  --ui-color-yellow-40:oklch(72% 0.16 83);
+  --ui-color-yellow-50:oklch(81% 0.16 83);
+  --ui-color-yellow-60:oklch(84% 0.12 83);
   --ui-color-yellow-70:oklch(88% 0.08 83);
   --ui-color-yellow-80:oklch(93% 0.04 83);
-  --ui-color-yellow-90:oklch(98% 0.01 83);
+  --ui-color-yellow-90:oklch(97% 0.01 83);
 }
