--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -102,6 +102,7 @@ button{
   border:none;
 }
 
+ui-switch[disabled],
 button[disabled]{
   cursor:not-allowed;
   opacity:0.5;
@@ -114,7 +115,7 @@ ui-checkbox,
 ui-switch,
 ui-tab,
 button{
-  outline-offset:1px;
+  outline-offset:2px;
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
